<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.FragmentHeroDetails">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="12dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgHero"
            android:layout_width="200dp"
            android:layout_height="240dp"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:elevation="12dp"
            android:foregroundGravity="center"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginVertical="8dp"
                    android:text="@string/label_power_stats"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:rowCount="2"
                    android:columnCount="3"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/little_stat_margin_h"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/little_stat"
                            android:layout_height="@dimen/little_stat"
                            android:backgroundTint="@color/color_intelligence"
                            android:elevation="10dp"
                            app:cardCornerRadius="40dp">

                            <TextView
                                android:textColor="@color/white"
                                android:id="@+id/txtIntelligence"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="123" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_smartness" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/little_stat_margin_h"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/little_stat"
                            android:layout_height="@dimen/little_stat"
                            android:backgroundTint="@color/color_strength"
                            android:elevation="10dp"
                            app:cardCornerRadius="40dp">

                            <TextView
                                android:textColor="@color/white"
                                android:id="@+id/txtStrenght"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="123" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_strengt" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/little_stat_margin_h"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/little_stat"
                            android:layout_height="@dimen/little_stat"
                            android:backgroundTint="@color/color_durability"
                            android:elevation="10dp"
                            app:cardCornerRadius="40dp">

                            <TextView
                                android:id="@+id/txtDurability"
                                android:textColor="@color/white"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="123" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_durability" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/little_stat_margin_h"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/little_stat"
                            android:layout_height="@dimen/little_stat"
                            android:backgroundTint="@color/color_speed"
                            android:elevation="10dp"
                            app:cardCornerRadius="40dp">

                            <TextView
                                android:textColor="@color/white"
                                android:id="@+id/txtSpeed"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="123" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_speed" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/little_stat_margin_h"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/little_stat"
                            android:layout_height="@dimen/little_stat"
                            android:backgroundTint="@color/color_power"
                            android:elevation="10dp"
                            app:cardCornerRadius="40dp">

                            <TextView
                                android:textColor="@color/white"
                                android:id="@+id/txtPower"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="123" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_power" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/little_stat_margin_h"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/little_stat"
                            android:layout_height="@dimen/little_stat"
                            android:backgroundTint="@color/color_combat"
                            android:elevation="10dp"
                            app:cardCornerRadius="40dp">

                            <TextView
                                android:textColor="@color/white"
                                android:id="@+id/txtCombat"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                tools:text="123" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/label_combat" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_marginVertical="8dp"
                    android:text="@string/label_appearance"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtRace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtEyeColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtHairColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginVertical="8dp"
                    android:text="@string/label_bio"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtAlterEgo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtAliases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtPlaceBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtFirstAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtFirstPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtFirstAlignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginVertical="8dp"
                    android:text="@string/label_work"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtWorkBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginVertical="8dp"
                    android:text="@string/label_connections"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtGroupAffiliation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtRelatives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>